# sdl3-examples

./: .clang-format  README.md
paint-splatters/: CMakeLists.txt  README.md
paint-splatters/src/: CMakeLists.txt  globals.h  main.cpp  splatter.cpp  splatter.h
perlin-walker/: CMakeLists.txt  README.md
perlin-walker/src/: CMakeLists.txt  main.cpp  walker.cpp  walker.h
rotational-symmetry/: CMakeLists.txt  README.md
rotational-symmetry/res/: plot1.ggb  plot1.odg  plot2.ggb  plot2.odg
rotational-symmetry/src/: CMakeLists.txt  main.cpp  symmetrizer.cpp  symmetrizer.h
streaming-texture/: CMakeLists.txt  README.md
streaming-texture/src/: CMakeLists.txt  main.cpp  streamer.cpp  streamer.h  texture_wrapper.h
template/: CMakeLists.txt  README.md
template/src/: CMakeLists.txt  main.cpp
